# PathMind

./: .gitignore  README.md  pyproject.toml  requirements.txt  roadmap.md
backend/: .env  .env.example  alembic.ini  check_env.py  ci_test.py  learning_path.db  pyproject.toml  quick_test.py  requirements-test.txt  requirements.txt  run_test_environment.py  run_tests.py  setup_test_env.py  test_server_connection.py
backend/alembic/: env.py
backend/app/: __init__.py  logging_config.py  main.py
backend/app/core/: __init__.py  (+1 more)
backend/scripts/: batch_test_ai_features.py  generate_report.py  test_full_flow.py  test_zhipuai.py
backend/tests/: conftest.py  learning_path.db  test_ai_features.py  test_api.py  test_plan.py  test_zhipuai_integration.py
docs/: api.md
frontend/: tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx
frontend/data/: users.ts
frontend/lib/: api-service.ts  mock-data.ts
gradio_front2/: api_service.py  app.py  requirements.txt  ui_components.py
gradio_front2/pages/: __init__.py  adaptive_test.py  analytics.py  assessment.py  content_viewer.py  dashboard.py  learning_path.py  learning_paths.py
gradio_front2/utils/: __init__.py  chart_utils.py  debug_tools.py  format_utils.py
gradio_frontend/: api_service.py  app.py  notes.md  requirements.txt
gradio_frontend/components/: assessment.py  content_viewer.py  dashboard.py  learning_paths.py
gradio_frontend/services/: api_service.py
gradio_frontend/tools/: api_checker.py  api_crawler.py  api_routes.py  endpoint_tester.py
(+55 files in other folders)
