[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PathMind"
version = "0.1.0"
description = "自适应学习路径平台"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

[project.dependencies]
fastapi = ">=0.104.0"
uvicorn = ">=0.23.2"
gradio = ">=4.0.0"
pydantic = ">=2.4.2"
python-dotenv = ">=1.0.0"

[tool.setuptools]
packages = ["backend", "gradio_front2"]

[tool.black]
line-length = 88

[tool.pytest]
testpaths = ["tests"]
